Rewrite whm to mhm: "mioty heat mapper"

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = wifi_heat_mapper/_version.py
-versionfile_build = wifi_heat_mapper/_version.py
+versionfile_source = mioty_heat_mapper/_version.py
+versionfile_build = mioty_heat_mapper/_version.py
 tag_prefix = ""
-parentdir_prefix = wifi_heat_mapper-
+parentdir_prefix = mioty_heat_mapper-
